--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -6,23 +6,23 @@
 Bootstrap tweaks
 ===============================================================*/
 
-body,
-h1,
-h2,
-h3,
-h4 {
-  font-weight: 300;
-}
+//body,
+//h1,
+//h2,
+//h3,
+//h4 {
+//  font-weight: 300;
+//}
 
 /* Increase contrast of links to get 100% on Lighthouse Accessability Audit. Override this color if you want to change the link color, or use a Bootswatch theme */
-a {
-  color: #533f03;
-  font-weight: bold;
-}
+//a {
+//  color: #533f03;
+//  font-weight: bold;
+//}
 
-a:hover {
-  color: #533f03;
-}
+//a:hover {
+//  color: #533f03;
+//}
 
 /* override hover color for dropdown-item forced by bootstrap to all a:not([href]):not([tabindex]) elements in _reboot.scss */
 a:not([href]):not([tabindex]):hover.dropdown-item {
@@ -200,3 +200,56 @@ ui bootstrap tweaks
 }
 
 /* jhipster-needle-scss-add-main JHipster will add new css style */
+html {
+  font-size: 15px;
+  font-family: 'Roboto', sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Open Sans', sans-serif;
+}
+
+.default-font {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !important;
+}
+
+.my-table {
+  margin-bottom: 0;
+
+  tbody {
+    border-bottom: 1px solid #c8ced3 !important;
+  }
+
+  tr:hover {
+    background-color: #45a9f41a;
+  }
+
+  th {
+    text-align: left;
+    border-bottom: 0;
+  }
+
+  th:not(.col-check) {
+    min-width: 100px;
+  }
+
+  thead {
+    color: #20a8d8 !important;
+    tr {
+      th {
+        border-bottom: 0;
+      }
+    }
+  }
+
+  th,
+  td {
+    max-width: 300px;
+  }
+}
