--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -253,3 +253,9 @@ h6 {
     max-width: 300px;
   }
 }
+.nodata {
+  color: #333333e0;
+  font-style: italic;
+  align-self: center;
+  padding: 5px;
+}
