--- a/src/main/webapp/app/modules/billiards-history/billiards-history-list/billiards-history-list.component.html
+++ b/src/main/webapp/app/modules/billiards-history/billiards-history-list/billiards-history-list.component.html
@@ -71,6 +71,7 @@
         </tr>
       </tbody>
     </table>
+    <div *ngIf="!modelList || !modelList.length" class="nodata">{{ 'common.nodata' | translate }}</div>
     <div class="card-footer">
       <ng-container *ngIf="modelList && modelList.length > 0">
         <div class="d-flex justify-content-between">
