--- a/src/main/webapp/app/modules/product-history/product-history-list/product-history-list.component.html
+++ b/src/main/webapp/app/modules/product-history/product-history-list/product-history-list.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    <span jhiTranslate="billiards.list">Danh sách bàn bida</span>
+    <span jhiTranslate="product-history.list">Danh sách lịch sử sản phẩm</span>
     <div class="pull-right">
       <button type="button" class="btn btn-square btn-primary" routerLink="../new"><span jhiTranslate="common.create"></span></button>
     </div>
