--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -7,6 +7,7 @@
 <!--<div class="container-fluid">-->
 <!--  <div class="card jh-card">-->
 <router-outlet></router-outlet>
+<ngx-loading-bar></ngx-loading-bar>
 <!--  </div>-->
 
 <!--  <jhi-footer></jhi-footer>-->
