--- a/src/main/webapp/app/modules/product-history/product-history-form/product-history-form.component.html
+++ b/src/main/webapp/app/modules/product-history/product-history-form/product-history-form.component.html
@@ -43,14 +43,13 @@
       <label for="provider" jhiTranslate="product-history.form.provider">Nhà cung cấp</label>
       <ng-select
         [(ngModel)]="formModel.provider"
-        [searchable]="false"
-        [clearable]="false"
-        [items]="providers"
+        [items]="providers$ | async"
         id="provider"
-        bindLabel="name"
+        bindLabel="description"
         name="provider"
         #provider="ngModel"
-        bindValue="id"
+        [typeahead]="providerInput$"
+        [loading]="loadingProvider"
         required
       >
       </ng-select>
@@ -58,24 +57,18 @@
         <div *ngIf="provider.errors.required">{{ 'validation.required' | translate }}</div>
       </div>
     </div>
-    <div class="form-group">
-      <label for="status" jhiTranslate="product-history.form.status">Trạng thái</label>
-      <ng-select
-        [(ngModel)]="formModel.status"
-        [searchable]="false"
-        [clearable]="false"
-        [items]="statusOptions"
-        id="status"
-        bindLabel="text"
-        name="status"
-        #status="ngModel"
-        [disabled]="!id"
-        bindValue="value"
-        required
-      >
-      </ng-select>
-      <div *ngIf="status.invalid && (status.dirty || status.touched || f.submitted)" class="msg-invalid mt-1">
-        <div *ngIf="status.errors.required">{{ 'validation.required' | translate }}</div>
+    <div class="row" *ngIf="id && formModel">
+      <div class="col">
+        <div class="form-group" *ngIf="formModel.user">
+          <label jhiTranslate="product-history.form.creator">Người tạo</label>
+          <input class="form-control" [value]="formModel.user.login" disabled readonly />
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-group">
+          <label jhiTranslate="product-history.form.createdDate">Ngày tạo</label>
+          <div class="form-control disabled">{{ formModel.receiveDate | date: 'dd/MM/yyyy HH:mm:ss' }}</div>
+        </div>
       </div>
     </div>
   </div>
