--- a/src/main/webapp/app/modules/product-history/product-history-list/product-history-list.component.html
+++ b/src/main/webapp/app/modules/product-history/product-history-list/product-history-list.component.html
@@ -16,7 +16,7 @@
                 type="text"
                 id="name"
                 class="form-control flex-grow-1"
-                [(ngModel)]="filter.name"
+                [(ngModel)]="filter.productName"
                 (keyup.enter)="search()"
                 trim="blur"
                 [trimOnWriteValue]="false"
@@ -26,18 +26,35 @@
 
           <div class="col-sm-6">
             <div class="form-inline">
-              <label class="w-40" for="statusFilter" jhiTranslate="billiards.table.status">Trạng thái</label>
+              <label class="w-40" for="provider" jhiTranslate="product-history.form.provider">Nhà cung cấp</label>
               <ng-select
+                [items]="providers$ | async"
+                [(ngModel)]="filter.providerId"
+                id="provider"
+                bindLabel="name"
+                bindValue="id"
                 class="flex-grow-1"
-                [(ngModel)]="filter.status"
-                [searchable]="false"
-                [clearable]="false"
-                [items]="statusOptions"
-                id="statusFilter"
-                bindLabel="text"
-                bindValue="value"
+                [typeahead]="providerInput$"
+                [loading]="loadingProvider"
               >
               </ng-select>
+            </div>
+          </div>
+
+          <div class="col-sm-6 mt-2">
+            <div class="form-inline">
+              <label class="w-40" for="creator" jhiTranslate="product-history.form.creator">Người tạo</label>
+              <ng-select
+                [items]="employees$ | async"
+                [(ngModel)]="filter.employeeId"
+                bindLabel="login"
+                bindValue="id"
+                id="creator"
+                class="flex-grow-1"
+                name="creator"
+                [typeahead]="employeeInput$"
+                [loading]="loadingEmployee"
+              ></ng-select>
             </div>
           </div>
         </div>
@@ -52,7 +69,8 @@
           <th><span jhiTranslate="product-history.form.price">Giá</span></th>
           <th><span jhiTranslate="product-history.form.quantity">Số lượng</span></th>
           <th><span jhiTranslate="product-history.form.provider">Nhà cung cấp</span></th>
-          <th><span jhiTranslate="product-history.form.status">Trạng thái</span></th>
+          <th><span jhiTranslate="product-history.form.creator">Người tạo</span></th>
+          <th><span jhiTranslate="product-history.form.createdDate">Ngày tạo</span></th>
           <th></th>
         </tr>
       </thead>
@@ -62,7 +80,8 @@
           <td>{{ item.price | number }}</td>
           <td>{{ item.quantity | number }}</td>
           <td>{{ item.provider.name }}</td>
-          <td [innerHTML]="item.status | status"></td>
+          <td>{{ item.user.login || '' }}</td>
+          <td>{{ item.receiveDate | date: 'dd/MM/yyyy' }}</td>
           <td>
             <a (click)="edit(item)"><i class="fa fa-edit"></i></a>
             <a (click)="delete(item)"><i class="fa fa-trash"></i></a>
