--- a/src/main/webapp/app/modules/customer/customer-list/customer-list.component.html
+++ b/src/main/webapp/app/modules/customer/customer-list/customer-list.component.html
@@ -26,18 +26,16 @@
 
           <div class="col-sm-6">
             <div class="form-inline">
-              <label class="w-40" for="statusFilter" jhiTranslate="customer.table.status">Trạng thái</label>
-              <ng-select
-                class="flex-grow-1"
-                [(ngModel)]="filter.status"
-                [searchable]="false"
-                [clearable]="false"
-                [items]="statusOptions"
-                id="statusFilter"
-                bindLabel="text"
-                bindValue="value"
-              >
-              </ng-select>
+              <label class="w-40" for="phoneNumber" jhiTranslate="customer.form.phoneNumber">Số điện thoại</label>
+              <input
+                type="text"
+                id="phoneNumber"
+                class="form-control flex-grow-1"
+                [(ngModel)]="filter.phoneNumber"
+                (keyup.enter)="search()"
+                trim="blur"
+                [trimOnWriteValue]="false"
+              />
             </div>
           </div>
         </div>
@@ -50,7 +48,7 @@
         <tr>
           <th><span jhiTranslate="customer.table.name">Tên</span></th>
           <th><span jhiTranslate="customer.table.phoneNumber">Số điện thoại</span></th>
-          <th><span jhiTranslate="customer.table.note">Ghi chú</span></th>
+          <th><span jhiTranslate="customer.table.dateOfBirth">Ngày sinh</span></th>
           <th></th>
         </tr>
       </thead>
@@ -58,7 +56,7 @@
         <tr *ngFor="let item of modelList">
           <td>{{ item.name }}</td>
           <td>{{ item.phoneNumber }}</td>
-          <td>{{ item.note | lmTo }}</td>
+          <td>{{ item.dateOfBirth | date: 'dd/MM/yyyy' }}</td>
           <td>
             <a (click)="edit(item)"><i class="fa fa-edit"></i></a>
             <a (click)="delete(item)"><i class="fa fa-trash"></i></a>
