--- a/src/main/webapp/content/scss/vendor.scss
+++ b/src/main/webapp/content/scss/vendor.scss
@@ -14,3 +14,4 @@ eg $input-color: red;
 @import '~@ng-select/ng-select/themes/default.theme.css';
 @import 'custom';
 @import '~ngx-toastr/toastr';
+@import '~ng-pick-datetime/assets/style/picker.min.css';
